<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="50dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/check_display_results_as_returned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/display_results_as_returned" />

    <CheckBox
        android:id="@+id/check_abort_on_first_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_display_results_as_returned"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/abort_on_first_exception" />

    <LinearLayout
        android:id="@+id/view_results"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/check_abort_on_first_exception"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initial_results" />
        </ScrollView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_results">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runMessageFormatText"
                android:text="@string/button_runMessageFormatText" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runMessageActionValidValid"
                android:text="@string/button_runMessageActionValidValid" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runMessageActionValidInvalid"
                android:text="@string/button_runMessageActionValidInvalid" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runMessageActionInvalidValid"
                android:text="@string/button_runMessageActionInvalidValid" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runPathGetDirectoryListing"
                android:text="@string/button_runPathGetDirectoryListing" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runFileReadLines"
                android:text="@string/button_runFileReadLines" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runCopyFileIntoCSEntry"
                android:text="@string/button_runCopyFileIntoCSEntry" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runCopyFileFromCSEntry"
                android:text="@string/button_runCopyFileFromCSEntry" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>